# cPico

./: .gitignore  LICENSE  README.md
BLINK/: CMakeLists.txt  blink.c
BLINK_W/: CMakeLists.txt  blink.cpp
TCPCLIENT_W/: CMakeLists.txt  TestServer.py  main.c  tempsender.cpp
VARIOS/: FreeRTOS.txt
WEBSERVER_W/: main.c
